release: bump version to v0.3.1
【智能咨询升级】FAQ检索升级为向量语义检索
- 集成硅基流动 SiliconFlow BAAI/bge-m3 嵌入模型（1024维）
- 引入 hnswlib 内存向量索引，构建高效语义检索引擎
- ConsultationController 放弃传统中文分词关键词匹配，改为向量相似度检索
- BizCivilFaq 新增 questionEmbedding 字段，持久化缓存问题向量

【系统公告功能】新增版本更新弹窗提示
- 后端新增 /system/announcement 与 /system/announcement/read 接口
- 基于用户 lastReadVersion 字段实现按版本精准推送，避免重复打扰
- 前端新增 UpdateAnnouncementDialog 组件，登录后自动检测未读公告
- 公告支持彝汉双语按钮展示

【数据模型扩展】
- SysUser 新增 lastReadVersion 字段，记录用户最后阅读版本号

【版本同步】
- 后端 application.yaml 与前端 package.json 统一更新至 v0.3.1